--- a/src/pages/LogInPage/LogInPage.css
+++ b/src/pages/LogInPage/LogInPage.css
@@ -8,13 +8,42 @@
   align-items: center;
   height: 80vh;
 }
+/* -----------------------login right------------------------ */
+.login-container__img {
+  height: 36rem;
+  width: 45rem;
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 20px;
+  border-radius: 15px;
+}
+
+.login__img {
+  height: 100%;
+  width: auto;
+  object-fit: cover;
+  transform: scale(2);
+}
+
+.login__logo {
+  position: absolute;
+  height: 90px;
+  width: auto;
+  top: 10px;
+  left: center;
+}
+
+/* -----------------------login left------------------------ */
 
 .login__left {
   width: auto;
   padding: 20px;
   border: none;
   border-radius: 20px;
-  /* box-shadow: 0px 0px 10px var(--grey); */
+  box-shadow: 0px 0px 10px var(--grey);
   background-color: var(--grey9);
 }
 
