--- a/src/components/CardProduct/Card.module.css
+++ b/src/components/CardProduct/Card.module.css
@@ -1,7 +1,8 @@
 .primary {
     display: flex;
-    background-color: white !important; /* Đảm bảo background là màu trắng */
-    color: #3A060E !important; 
+    background-color: white !important;
+    /* Đảm bảo background là màu trắng */
+    color: #3A060E !important;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     border-color: #B1E321 !important;
@@ -9,7 +10,8 @@
 
 .secondary {
     display: flex;
-    background-color: #3A060E !important; /* Màu nền nâu cho secondary */
+    background-color: #3A060E !important;
+    /* Màu nền nâu cho secondary */
     color: white !important;
     border-radius: 15px;
     border: none !important;
@@ -23,5 +25,6 @@
 }
 
 .cardTitle {
-    color: inherit; /* Đảm bảo lấy màu từ parent */
+    color: inherit;
+    /* Đảm bảo lấy màu từ parent */
 }
