--- a/src/components/CardProduct/Card.module.css
+++ b/src/components/CardProduct/Card.module.css
@@ -5,7 +5,16 @@
     color: #3A060E !important;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    border-color: #B1E321 !important;
+    border: none;
+    box-shadow: 0px 2px 4px 0px #203c1640;
+    padding: 0;
+    
+}
+
+.primary:hover{
+    transition: 0.25s;
+    transform: translateY(-8px);
+    cursor: pointer;
 }
 
 .secondary {
@@ -17,14 +26,3 @@
     border: none !important;
 }
 
-
-
-/* Class riêng cho hình ảnh và title */
-.cardImage {
-    width: 100%;
-}
-
-.cardTitle {
-    color: inherit;
-    /* Đảm bảo lấy màu từ parent */
-}
