--- a/src/components/SliderComponent/SliderComponent.css
+++ b/src/components/SliderComponent/SliderComponent.css
@@ -2,30 +2,29 @@
 @import "slick-carousel/slick/slick-theme.css";
 
 /* CSS cho container của slide */
+.slider-container{
+    width: 100vw;
+    margin-left: auto;
+}
 .slider-item {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
-    margin:auto;
-    max-height: 100% ; /* Căn giữa slider */
+    margin: auto;
+    max-height: 100%; /* Căn giữa slider */
     cursor: pointer;
 }
 
 /* Đảm bảo ảnh trong slider chiếm toàn bộ chiều rộng slider */
 .slider-image {
-    width: 100% ;
+    width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center;
 }
 
-/* Responsive cho màn hình lớn */
-@media (min-width: 1024px) {
-    .slider-item {
-        height: auto; /* Chiều cao slider cho màn hình lớn */
-    }
-}
+
 
 /* Responsive cho màn hình trung bình (tablet) */
 @media (min-width: 768px) and (max-width: 1023px) {
@@ -50,3 +49,21 @@
         height: 100%;
     }
 }
+
+/* Định dạng cơ bản cho nút
+.prev-button,
+.next-button {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 50%;
+  z-index: 10;
+} */
+
+
