--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -13,8 +13,9 @@
   --green30: #b1e3214d;
   --green10: #b2e3211d;
   --white: #fff;
-  --grey9: #f9f9f9;
+  --grey5: #f5f5f5;
   --grey: #ccc;
+  --shadow: #203c1640;
   --button-width: 13rem;
   --button-height: 4.4rem;
   --search-box-width: 44rem;
