--- a/src/components/FormComponent/FormComponent.module.css
+++ b/src/components/FormComponent/FormComponent.module.css
@@ -15,5 +15,8 @@
   margin: 10px 0;
   padding-left: 20px;
   outline: none;
-  /* box-shadow: 0 0 5px var(--grey); */
+  box-shadow: 0px 2px 4px 0px #203c1640;
+}
+.form__text:focus {
+  border-color: var(--brown100);
 }
