--- a/src/pages/LogInPage/LogInPage.css
+++ b/src/pages/LogInPage/LogInPage.css
@@ -8,7 +8,7 @@
   align-items: center;
   height: 80vh;
 }
-/* -----------------------login right------------------------ */
+/* -----------------------login left------------------------ */
 .login-container__img {
   height: 36rem;
   width: 45rem;
@@ -36,15 +36,15 @@
   left: center;
 }
 
-/* -----------------------login left------------------------ */
+/* -----------------------login right------------------------ */
 
 .login__left {
   width: auto;
   padding: 20px;
   border: none;
   border-radius: 20px;
-  box-shadow: 0px 0px 10px var(--grey);
-  background-color: var(--grey9);
+  box-shadow: 0px 2px 4px 0px var(--grey5);
+  background-color: var(--grey5);
 }
 
 .login__title {
