--- a/src/pages/SignUpPage/SignUpPage.css
+++ b/src/pages/SignUpPage/SignUpPage.css
@@ -37,13 +37,13 @@
 }
 /* -----------------------signup right ---------------------------- */
 
-.signup__left {
+.signup__right {
   width: auto;
   padding: 20px;
   border: none;
   border-radius: 20px;
-  box-shadow: 0px 0px 10px var(--grey);
-  background-color: var(--grey9);
+  box-shadow: 0px 2px 4px 0px #203c1640;
+  background-color: var(--grey5);
 }
 
 .signup__title {
@@ -54,22 +54,16 @@
   font-size: var(--font-size-title);
 }
 
-
-
-
-
-
 .case__login {
-    text-align: center;
-    margin-top: 15px;
-    font-size: 1.4rem;
-    color: var(--brown100);
-  }
-  
-  .btn__goto__login {
-    color: var(--brown100);
-    text-decoration: none;
-    font-style: italic;
-    padding: 8px;
-  }
-  
+  text-align: center;
+  margin-top: 15px;
+  font-size: 1.4rem;
+  color: var(--brown100);
+}
+
+.btn__goto__login {
+  color: var(--brown100);
+  text-decoration: none;
+  font-style: italic;
+  padding: 8px;
+}
