--- a/src/components/HeaderComponent/HeaderComponent.module.css
+++ b/src/components/HeaderComponent/HeaderComponent.module.css
@@ -1,3 +1,7 @@
+.bg-white {
+  width: max-content;
+}
+
 .navbar {
   display: flex;
   justify-content: space-between;
@@ -70,5 +74,5 @@ img {
   justify-content: center;
   align-items: center;
   padding: 10px 0;
-  margin: 15px 0 0 ;
+  margin: 15px 0 0;
 }
