--- a/src/components/SideMenuComponent/SideMenuComponent.css
+++ b/src/components/SideMenuComponent/SideMenuComponent.css
@@ -5,12 +5,21 @@
   padding: 1rem;
   box-shadow: 0px 2px 4px 0px #203c1640;
   border-radius: 8px;
+  top: 0;
+  flex-direction: column;
 }
+
+/* .btn-group-vertical {
+  justify-content: none;
+  align-content: top;
+  align-items: top;
+} */
 
 .btn__component {
   width: 20rem;
   justify-content: left;
   align-content: center;
+  align-items: top;
 }
 
 .btn__component:hover {
