--- a/src/pages/ForgotPasswordPage/pages/EnterNewPassword.css
+++ b/src/pages/ForgotPasswordPage/pages/EnterNewPassword.css
@@ -1,15 +1,15 @@
-.container-login {
+.container-new-password {
   background-color: var(--white);
 }
 
-.login-container {
+.new-password-container {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 80vh;
 }
-/* -----------------------login left------------------------ */
-.login-container__img {
+/* -----------------------new-password left------------------------ */
+.new-password-container__img {
   height: 36rem;
   width: 45rem;
   position: relative;
@@ -21,14 +21,14 @@
   border-radius: 15px;
 }
 
-.login__img {
+.new-password__img {
   height: 100%;
   width: auto;
   object-fit: cover;
   transform: scale(2);
 }
 
-.login__logo {
+.new-password__logo {
   position: absolute;
   height: 90px;
   width: auto;
@@ -36,10 +36,11 @@
   left: center;
 }
 
-/* -----------------------login right------------------------ */
+/* -----------------------new-password right------------------------ */
 
-.login__left {
+.new-password__left {
   width: auto;
+  height: 36rem;
   padding: 20px;
   border: none;
   border-radius: 20px;
@@ -47,38 +48,18 @@
   background-color: var(--grey5);
 }
 
-.login__title {
-  margin-bottom: 1.6rem;
+.new-password__title {
+  margin: 20px auto 40px;
   text-align: center;
   color: var(--brown100);
-  font-weight: 600;
+  font-weight: 700;
   font-size: var(--font-size-title);
 }
 
-.login__form {
+.new-password__form {
   display: flex;
   flex-direction: column;
-  gap: 20px;
-}
-
-.login__extend {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-size: 1.4rem;
-  color: var(--brown100);
-  margin-bottom: 10px;
-}
-
-.remember__password {
-  display: flex;
-  align-items: center;
-  padding: 8px;
-  cursor: pointer;
-}
-
-.remember__checkbox {
-  margin-right: 8px;
+  gap: 10px;
 }
 
 .forgot__password {
@@ -88,19 +69,9 @@
   text-decoration: none;
   cursor: pointer;
   padding: 8px;
+  transition: 0.25s;
 }
 
-.case__signup {
-  text-align: center;
-  margin-top: 15px;
-  font-size: 1.4rem;
-  color: var(--brown100);
-}
-
-.btn__goto__signup {
-  color: var(--brown100);
-  text-decoration: none;
-  font-style: italic;
-  padding: 8px;
-  /* color: var(--green100); */
+.btn__confirm {
+  margin-top: 20px;
 }
