--- a/src/pages/User/ProductsPage/ProductsPage.css
+++ b/src/pages/User/ProductsPage/ProductsPage.css
@@ -52,3 +52,27 @@
   justify-content: center;
   margin: 0 auto;
 } */
+
+/* 
+@media xxl {
+  .product__list {
+    display: grid;
+    gap: 5px;
+    justify-content: space-between;
+    grid-template-columns: repeat(4, 1fr);
+    background-color: var(--grey5);
+  }
+} */
+
+@media (max-width: 539.98px) {
+  .side-menu__category {
+    visibility: hidden;
+  }
+  .product__list {
+    display: grid;
+    gap: 5px;
+    justify-content: space-between;
+    grid-template-columns: repeat(1, 1fr);
+    /* background-color: var(--grey5); */
+  }
+}
