--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14,6 +14,7 @@
   --green10: #b2e3211d;
   --white: #fff;
   --grey5: #f5f5f5;
+  --grey9: #f9f9f9;
   --grey: #ccc;
   --shadow: #203c1640;
   --button-width: 13rem;
