--- a/src/components/SideMenuComponent/SideMenuComponent.css
+++ b/src/components/SideMenuComponent/SideMenuComponent.css
@@ -3,7 +3,7 @@
   width: 22rem;
   height: auto;
   padding: 1rem;
-  box-shadow: 0px 2px 4px 0px #203c1640;
+  /* box-shadow: 0px 2px 4px 0px #203c1640; */
   border-radius: 8px;
   top: 0;
   flex-direction: column;
