--- a/src/components/SizeComponent/SizeComponent.css
+++ b/src/components/SizeComponent/SizeComponent.css
@@ -1,6 +1,6 @@
 .size-component {
   padding: 8px 16px;
-  margin: 10px;
+  /* margin: 10px; */
   font-size: 1.2rem;
   color: var(--brown100);
   border-radius: 50px;
@@ -10,6 +10,6 @@
 }
 
 .size-component:hover {
-  border: none;
+  border-color: var(--green100);
   background: var(--green100);
 }
