--- a/src/pages/User/ContactPage/ContactPage.css
+++ b/src/pages/User/ContactPage/ContactPage.css
@@ -1,36 +1,33 @@
 .h1 {
-    color: var(--Color1, #3A060E);
-    text-align: center;
-    font-family: Poppins !important;
-    font-size: 36px;
-    font-style: normal;
-    font-weight: 700 !important;
-    line-height: 28px;
-    margin: auto;
-    margin-top: 50px;
+  color: var(--brown100, #3a060e);
+  text-align: center;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700 !important;
+  line-height: 28px;
+  margin: auto;
+  margin-top: 50px;
 }
 
 h3 {
-    color: rgba(58, 6, 14, 0.75);
-    font-family: Poppins ;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 700 !important;
-    line-height: normal;
+  color: var(--brown100);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 700 !important;
+  line-height: normal;
 }
 
 label {
-    color: rgba(58, 6, 14, 0.75);
-    font-family: Poppins;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  color: var(--brown100);
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .img {
-    width: 65rem;
-    margin-top: 30px;
-    margin-left: 125px;
-    margin-bottom: 100px;
+  width: 65rem;
+  margin-top: 30px;
+  margin-left: 125px;
+  margin-bottom: 100px;
 }
