--- a/src/pages/User/OrderInformationPage/OrderInformation.css
+++ b/src/pages/User/OrderInformationPage/OrderInformation.css
@@ -1,86 +1,43 @@
-.title{
+.title {
     color: #3A060E;
 
-/* Font_Header */
-font-family: Poppins;
-font-size: 40px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-margin-left: 331px;
-margin-top: -10px;
+    /* Font_Header */
+    font-family: Poppins;
+    font-size: 40px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-left: 331px;
+    margin-top: -10px;
 }
 
-.product_area {
+.order_area {
     width: 1200px;
     flex-shrink: 0;
     border-radius: 20px;
     background: var(--White, #FFF);
     box-shadow: 0px 0px 4px 0px var(--dropshadow, rgba(32, 60, 22, 0.25));
-    margin-top: -140px;
+    margin-top: 30px;
     margin-left: 50px;
 }
 
-.Btn_area {
+
+
+.TongtienHolder{
+    display: flex;
     width: 1200px;
-    height: 224px;
-    flex-shrink: 0;
-    border-radius: 0px 0px 15px 15px;
-    background: var(--button-color, #B1E321);
-    margin-top: 5px;
-}
-
-.Buy_btn {
-    width: var(--button-width);
-    height: var(--button-height);
-    padding: 8px 16px;
-    justify-content: center;
     align-items: center;
-    border-radius: 50px;
-    background-color: var(--brown100);
-    color: var(--green100);
-    border: none;
-    font-size: 1.6rem;
-    font-weight: 600;
-    margin-left: 830px;
-    margin-top: 40px;
-
+    gap: 55px;
+    margin-top: 5px;
+    padding: 20px;
+    background: var(--White, #FFF);
+    box-shadow: 0px 0px 4px 0px var(--dropshadow, rgba(32, 60, 22, 0.25));
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
 }
-
-.Buy_more {
-    border: none;
-    background-color: #B1E321;
-    color: #3A060E;
-    margin-left: 37px;
-    margin-top: 40px;
-}
-
-.Btn_holder {
-    display: flex;
-}
-
-.total_holder {
-    display: flex;
-    margin-left: 50px;
-}
-
 
 .tongtien {
     color: #3A060E;
-
-/* Font_Title */
-font-family: Poppins;
-font-size: 20px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-margin-left: 43px;
-margin-top: 10px;
-margin-bottom: 10px;
-}
-
-.total {
-    color: var(--Color1, #3A060E);
 
     /* Font_Title */
     font-family: Poppins;
@@ -88,10 +45,11 @@ margin-bottom: 10px;
     font-style: normal;
     font-weight: 700;
     line-height: normal;
-    margin-left: 18px;
-    margin-right: 75px;
-    margin-top: 56px;
+    margin-left: 43px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
+
 
 .product_area {
     margin-top: 30px;
@@ -99,14 +57,14 @@ margin-bottom: 10px;
 
 
 .LineProduct {
-display: flex;
-width: 1200px;
-align-items: center;
-gap: 55px;
-margin-top: 5px;
-padding: 20px;
-background: var(--White, #FFF);
-box-shadow: 0px 0px 4px 0px var(--dropshadow, rgba(32, 60, 22, 0.25));
+    display: flex;
+    width: 1200px;
+    align-items: center;
+    gap: 55px;
+    margin-top: 5px;
+    padding: 20px;
+    background: var(--White, #FFF);
+    box-shadow: 0px 0px 4px 0px var(--dropshadow, rgba(32, 60, 22, 0.25));
 }
 
 
@@ -114,8 +72,7 @@ box-shadow: 0px 0px 4px 0px var(--dropshadow, rgba(32, 60, 22, 0.25));
 .PriceHeader,
 .QuantityHeader,
 .MoneyHeader,
-.MoneyProduct
- {
+.MoneyProduct {
     color: #3A060E;
 
     /* Font_Title */
@@ -126,49 +83,58 @@ box-shadow: 0px 0px 4px 0px var(--dropshadow, rgba(32, 60, 22, 0.25));
     line-height: normal;
     margin-left: 20px;
 }
-.HeaderHolder{
+
+.HeaderHolder {
     display: flex;
     margin-bottom: 20px;
     margin-top: 20px;
 }
-.HeaderInfor{
+
+.HeaderInfor {
     margin-left: 85px;
 }
-.HeaderPrice{
+
+.HeaderPrice {
     margin-left: 330px;
 }
-.HeaderQuantity{
+
+.HeaderQuantity {
     margin-left: 130px;
 }
-.HeaderMoney{
+
+.HeaderMoney {
     margin-left: 90px;
 }
-.PriceProduct{
+
+.PriceProduct {
 
     width: 200px;
-   margin-left: 10px;
+    margin-left: 10px;
 }
 
-.ProductInfor{
+.ProductInfor {
     margin-left: 50px;
 }
-.Money{
-    
+
+.Money {
+
     width: 200px;
     margin-left: 50px;
-    
-}
-.Price{
-color: #3A060E;
 
-/* Font_Text_Big */
-font-family: Poppins;
-font-size: 20px;
-font-style: normal;
-font-weight: 400;
-line-height: normal;
 }
-.thanhtien{
+
+.Price {
+    color: #3A060E;
+
+    /* Font_Text_Big */
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.thanhtien {
     color: #3A060E;
 
     /* Font_Title */
@@ -179,8 +145,227 @@ line-height: normal;
     line-height: normal;
     margin-top: 10px;
     margin-bottom: 10px;
-    margin-left: 770px ;
+    margin-left: 770px;
 }
-.Quantity{
+
+.Quantity {
     margin-left: -10px;
+}
+
+.login-question {
+    color: #3A060E;
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.login-link {
+    color: #47CD3B;
+    font-family: Poppins;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-decoration-line: underline;
+    text-decoration-style: solid;
+    text-decoration-skip-ink: auto;
+    text-decoration-thickness: auto;
+    text-underline-position: from-font;
+}
+
+.question {
+    margin-left: 50px;
+    margin-top: 50px;
+}
+
+.addressHolder,
+.DeliveryTimeHolder,
+.Note,
+.Button-area{
+    margin-left: 50px;
+}
+
+.DiaChi,
+.ThoiGian,
+.labelNote {
+    color: var(--Color1, #3A060E);
+    font-family: Poppins;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-top: 46px;
+}
+
+.input-address {
+    display: flex;
+    width: 1200px;
+    height: 60px;
+    justify-content: center;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 15px;
+    background: #FFF;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+    border: none;
+    margin-top: 20px;
+}
+
+.Province,
+.District,
+.Village {
+    display: flex;
+    width: 220px;
+    height: 60px;
+    padding: 16px 20px;
+    justify-content: space-between;
+    align-items: center;
+    flex-shrink: 0;
+    border-radius: 15px;
+    background: #FFF;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #3A060E;
+    border: none;
+}
+
+.comboBoxHolder {
+    display: flex;
+    margin-left: 50px;
+    margin-top: 30px;
+}
+
+.DistrictHolder,
+.VillageHolder {
+    margin-left: 238px;
+}
+
+.TimeHolder {
+    margin-left: -50px;
+    font-size: 25px;
+}
+
+.DateHolder {
+
+    margin-left: 232px;
+    font-size: 20px;
+}
+
+.clock,
+.Datepicker {
+    display: flex;
+    width: 220px;
+    height: 60px;
+    padding: 16px 20px;
+    justify-content: space-between;
+    align-items: center;
+    flex-shrink: 0;
+    display: flex;
+    width: 220px;
+    height: 60px;
+    padding: 16px 20px;
+    justify-content: space-between;
+    align-items: center;
+    flex-shrink: 0;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+    color: #3A060E;
+}
+
+.lableHolder {
+    margin-left: 20px;
+    display: flex;
+    margin-top: 30px;
+}
+
+.lableDate {
+    margin-left: 262px;
+}
+
+.ChonGio {
+    color: var(--Color1, #3A060E);
+    text-align: center;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 28px;
+    /* 175% */
+    margin-left: -20px;
+    margin-right: 30px;
+}
+
+.ChonNgay {
+    color: var(--Color1, #3A060E);
+    text-align: center;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 28px;
+    /* 175% */
+    margin-left: 90px;
+    margin-right: 30px;
+}
+
+.inputNote {
+    width: 1200px;
+    height: 160px;
+    flex-shrink: 0;
+    border-radius: 15px;
+    background: var(--White, #FFF);
+    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+    font-size: 16px;
+    color: #3A060E;
+    border: none;
+    margin-top: 30px;
+}
+
+.chinhsach{
+    color: #3A060E;
+
+/* Font_Text */
+font-family: Poppins;
+font-size: 16px;
+font-style: italic;
+font-weight: 400;
+line-height: normal;
+text-decoration-line: underline;
+text-decoration-style: solid;
+text-decoration-skip-ink: auto;
+text-decoration-thickness: auto;
+text-underline-offset: auto;
+text-underline-position: from-font;
+}
+.chinhsachBtn{
+    border: none;
+    margin-top: 20px;
+    background-color: #FFF;
+}
+
+.Btn_holder {
+    display: flex;
+    margin-left: 880px;
+    margin-bottom: 50px;
+}
+
+.Next_btn {
+    display: flex;
+width: 130px;
+padding: 8px 16px;
+justify-content: center;
+align-items: center;
+gap: 10px;
+border-radius: 50px;
+background: #3A060E;
+color: #B1E321;
+text-align: center;
+font-family: Poppins;
+font-size: 16px;
+font-style: normal;
+font-weight: 600;
+line-height: 28px; /* 175% */
+margin-left: 66px;
 }
