--- a/src/components/HeaderComponent/HeaderComponent.module.css
+++ b/src/components/HeaderComponent/HeaderComponent.module.css
@@ -85,6 +85,9 @@ img {
 }
 
 .user__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: var(--white);
   gap: 10px;
 }
