--- a/src/pages/User/UserInfoPage/UserInfoPage.css
+++ b/src/pages/User/UserInfoPage/UserInfoPage.css
@@ -53,7 +53,7 @@ label {
   width: 100%;
   border-radius: 15px;
   box-shadow: 0px 0px 4px 0px var(--shadow);
-  padding: 20px 10px;
+  padding: 20px;
 }
 
 .form-row {
@@ -66,4 +66,26 @@ label {
 .form-group {
   flex: 1;
   margin-bottom: 20px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5); /* Overlay mờ */
+  z-index: 999;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+  z-index: 1000; /* Cao hơn overlay */
 }
