--- a/src/components/CardProductAdmin/CardProductAdmin.css
+++ b/src/components/CardProductAdmin/CardProductAdmin.css
@@ -29,4 +29,9 @@
     border: none;
     background-color: white;
 }
+.primary:hover{
+    transition: 0.25s;
+    transform: translateY(-8px);
+    cursor: pointer;
+}
 
