--- a/src/components/CardProduct/Card.module.css
+++ b/src/components/CardProduct/Card.module.css
@@ -26,3 +26,19 @@
     border: none !important;
 }
 
+.flying-product {
+    position: fixed;
+    z-index: 1000;
+    width: 50px;
+    height: 50px;
+    transition: transform 1s ease, opacity 1s ease;
+    opacity: 1;
+  }
+  
+.flying-product img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 50%;
+  }
+  
