--- a/src/components/ProductInfor/ProductInfor.css
+++ b/src/components/ProductInfor/ProductInfor.css
@@ -1,33 +1,34 @@
 .producInfor {
-    display: flex;
+  display: flex;
 }
 
 .imagePro {
-    width: 164.122px;
-    height: 116px;
-    flex-shrink: 0;
-    border-radius: 15px;
+  width: 164.122px;
+  height: 116px;
+  flex-shrink: 0;
+  border-radius: 15px;
+  object-fit: cover;
 }
 
 .ProName {
-    color: #3A060E;
+  color: #3a060e;
 
-    /* Font_Title */
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    width: 300px;
-    margin-left: 10px;
+  /* Font_Title */
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  width: 300px;
+  margin-left: 10px;
 }
 
 .ProSize {
-    color: #3A060E;
-    font-family: Poppins;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    margin-left: 10px;
+  color: #3a060e;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-left: 10px;
 }
