--- a/src/pages/User/OrderInformationPage/OrderInformation.css
+++ b/src/pages/User/OrderInformationPage/OrderInformation.css
@@ -1,372 +1,363 @@
 .title {
-    color: #3A060E;
+  color: #3a060e;
 
-    /* Font_Header */
-    font-family: Poppins;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    margin-left: 331px;
-    margin-top: -10px;
+  /* Font_Header */
+  font-family: Poppins;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-left: 331px;
+  margin-top: -10px;
 }
 
 .order_area {
-    width: 1200px;
-    flex-shrink: 0;
-    border-radius: 20px;
-    background: var(--White, #FFF);
-    box-shadow: 0px 0px 4px 0px var(--dropshadow, rgba(32, 60, 22, 0.25));
-    margin-top: 30px;
-    margin-left: 50px;
+  width: 1200px;
+  flex-shrink: 0;
+  border-radius: 20px;
+  background: var(--White, #fff);
+  box-shadow: 0px 0px 4px 0px var(--dropshadow, rgba(32, 60, 22, 0.25));
+  margin-top: 30px;
+  margin-left: 50px;
 }
 
-
-
-.TongtienHolder{
-    display: flex;
-    width: 1200px;
-    align-items: center;
-    gap: 55px;
-    margin-top: 5px;
-    padding: 20px;
-    background: var(--White, #FFF);
-    box-shadow: 0px 0px 4px 0px var(--dropshadow, rgba(32, 60, 22, 0.25));
-    border-bottom-right-radius: 15px;
-    border-bottom-left-radius: 15px;
+.TongtienHolder {
+  display: flex;
+  width: 1200px;
+  align-items: center;
+  gap: 55px;
+  margin-top: 5px;
+  padding: 20px;
+  background: var(--White, #fff);
+  box-shadow: 0px 0px 4px 0px var(--dropshadow, rgba(32, 60, 22, 0.25));
+  border-bottom-right-radius: 15px;
+  border-bottom-left-radius: 15px;
 }
 
 .tongtien {
-    color: #3A060E;
+  color: #3a060e;
 
-    /* Font_Title */
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    margin-left: 43px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+  /* Font_Title */
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-left: 43px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
-
 
 .product_area {
-    margin-top: 30px;
+  margin-top: 30px;
 }
-
 
 .LineProduct {
-    display: flex;
-    width: 1200px;
-    align-items: center;
-    gap: 55px;
-    margin-top: 5px;
-    padding: 20px;
-    background: var(--White, #FFF);
-    box-shadow: 0px 0px 4px 0px var(--dropshadow, rgba(32, 60, 22, 0.25));
+  display: flex;
+  width: 1200px;
+  align-items: center;
+  gap: 55px;
+  margin-top: 5px;
+  padding: 20px;
+  background: var(--White, #fff);
+  box-shadow: 0px 0px 4px 0px var(--dropshadow, rgba(32, 60, 22, 0.25));
 }
-
-
 
 .ProductInforHear,
 .PriceHeader,
 .QuantityHeader,
 .MoneyHeader,
 .MoneyProduct {
-    color: #3A060E;
+  color: #3a060e;
 
-    /* Font_Title */
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    margin-left: 20px;
+  /* Font_Title */
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-left: 20px;
 }
 
 .HeaderHolder {
-    display: flex;
-    margin-bottom: 20px;
-    margin-top: 20px;
+  display: flex;
+  margin-bottom: 20px;
+  margin-top: 20px;
 }
 
 .HeaderInfor {
-    margin-left: 85px;
+  margin-left: 85px;
 }
 
 .HeaderPrice {
-    margin-left: 330px;
+  margin-left: 330px;
 }
 
 .HeaderQuantity {
-    margin-left: 130px;
+  margin-left: 130px;
 }
 
 .HeaderMoney {
-    margin-left: 90px;
+  margin-left: 90px;
 }
 
 .PriceProduct {
-
-    width: 200px;
-    margin-left: 10px;
+  width: 200px;
+  margin-left: 10px;
 }
 
 .ProductInfor {
-    margin-left: 50px;
+  margin-left: 50px;
 }
 
 .Money {
-
-    width: 200px;
-    margin-left: 50px;
-
+  width: 200px;
+  margin-left: 50px;
 }
 
 .Price {
-    color: #3A060E;
+  color: #3a060e;
 
-    /* Font_Text_Big */
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  /* Font_Text_Big */
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  width: 100px;
 }
 
 .thanhtien {
-    color: #3A060E;
+  color: #3a060e;
 
-    /* Font_Title */
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 770px;
+  /* Font_Title */
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 770px;
 }
 
 .Quantity {
-    margin-left: -10px;
+  margin-left: -10px;
 }
 
 .login-question {
-    color: #3A060E;
-    font-family: Poppins;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
+  color: #3a060e;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 .login-link {
-    color: #47CD3B;
-    font-family: Poppins;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    text-decoration-line: underline;
-    text-decoration-style: solid;
-    text-decoration-skip-ink: auto;
-    text-decoration-thickness: auto;
-    text-underline-position: from-font;
+  color: #47cd3b;
+  font-family: Poppins;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-decoration-skip-ink: auto;
+  text-decoration-thickness: auto;
+  text-underline-position: from-font;
 }
 
 .question {
-    margin-left: 50px;
-    margin-top: 50px;
+  margin-left: 50px;
+  margin-top: 50px;
 }
 
 .addressHolder,
 .DeliveryTimeHolder,
 .Note,
-.Button-area{
-    margin-left: 50px;
+.Button-area {
+  margin-left: 50px;
 }
 
 .DiaChi,
 .ThoiGian,
 .labelNote {
-    color: var(--Color1, #3A060E);
-    font-family: Poppins;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    margin-top: 46px;
+  color: var(--Color1, #3a060e);
+  font-family: Poppins;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-top: 46px;
 }
 
 .input-address {
-    display: flex;
-    width: 1200px;
-    height: 60px;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
-    border-radius: 15px;
-    background: #FFF;
-    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
-    border: none;
-    margin-top: 20px;
+  display: flex;
+  width: 1200px;
+  height: 60px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 15px;
+  background: #fff;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  border: none;
+  margin-top: 20px;
 }
 
 .Province,
 .District,
 .Village {
-    display: flex;
-    width: 220px;
-    height: 60px;
-    padding: 16px 20px;
-    justify-content: space-between;
-    align-items: center;
-    flex-shrink: 0;
-    border-radius: 15px;
-    background: #FFF;
-    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
-    color: #3A060E;
-    border: none;
+  display: flex;
+  width: 220px;
+  height: 60px;
+  padding: 16px 20px;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0;
+  border-radius: 15px;
+  background: #fff;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  color: #3a060e;
+  border: none;
 }
 
 .comboBoxHolder {
-    display: flex;
-    margin-left: 50px;
-    margin-top: 30px;
+  display: flex;
+  margin-left: 50px;
+  margin-top: 30px;
 }
 
 .DistrictHolder,
 .VillageHolder {
-    margin-left: 238px;
+  margin-left: 238px;
 }
 
 .TimeHolder {
-    margin-left: -50px;
-    font-size: 25px;
+  margin-left: -50px;
+  font-size: 25px;
 }
 
 .DateHolder {
-
-    margin-left: 232px;
-    font-size: 20px;
+  margin-left: 232px;
+  font-size: 20px;
 }
 
 .clock,
 .Datepicker {
-    display: flex;
-    width: 220px;
-    height: 60px;
-    padding: 16px 20px;
-    justify-content: space-between;
-    align-items: center;
-    flex-shrink: 0;
-    display: flex;
-    width: 220px;
-    height: 60px;
-    padding: 16px 20px;
-    justify-content: space-between;
-    align-items: center;
-    flex-shrink: 0;
-    border: none;
-    border-radius: 15px;
-    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
-    color: #3A060E;
+  display: flex;
+  width: 220px;
+  height: 60px;
+  padding: 16px 20px;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0;
+  display: flex;
+  width: 220px;
+  height: 60px;
+  padding: 16px 20px;
+  justify-content: space-between;
+  align-items: center;
+  flex-shrink: 0;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  color: #3a060e;
 }
 
 .lableHolder {
-    margin-left: 20px;
-    display: flex;
-    margin-top: 30px;
+  margin-left: 20px;
+  display: flex;
+  margin-top: 30px;
 }
 
 .lableDate {
-    margin-left: 262px;
+  margin-left: 262px;
 }
 
 .ChonGio {
-    color: var(--Color1, #3A060E);
-    text-align: center;
-    font-family: Poppins;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 28px;
-    /* 175% */
-    margin-left: -20px;
-    margin-right: 30px;
+  color: var(--Color1, #3a060e);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px;
+  /* 175% */
+  margin-left: -20px;
+  margin-right: 30px;
 }
 
 .ChonNgay {
-    color: var(--Color1, #3A060E);
-    text-align: center;
-    font-family: Poppins;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 28px;
-    /* 175% */
-    margin-left: 90px;
-    margin-right: 30px;
+  color: var(--Color1, #3a060e);
+  text-align: center;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px;
+  /* 175% */
+  margin-left: 90px;
+  margin-right: 30px;
 }
 
 .inputNote {
-    width: 1200px;
-    height: 160px;
-    flex-shrink: 0;
-    border-radius: 15px;
-    background: var(--White, #FFF);
-    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
-    font-size: 16px;
-    color: #3A060E;
-    border: none;
-    margin-top: 30px;
+  width: 1200px;
+  height: 160px;
+  flex-shrink: 0;
+  border-radius: 15px;
+  background: var(--White, #fff);
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.25);
+  font-size: 16px;
+  color: #3a060e;
+  border: none;
+  margin-top: 30px;
 }
 
-.chinhsach{
-    color: #3A060E;
+.chinhsach {
+  color: #3a060e;
 
-/* Font_Text */
-font-family: Poppins;
-font-size: 16px;
-font-style: italic;
-font-weight: 400;
-line-height: normal;
-text-decoration-line: underline;
-text-decoration-style: solid;
-text-decoration-skip-ink: auto;
-text-decoration-thickness: auto;
-text-underline-offset: auto;
-text-underline-position: from-font;
+  /* Font_Text */
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: italic;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-decoration-skip-ink: auto;
+  text-decoration-thickness: auto;
+  text-underline-offset: auto;
+  text-underline-position: from-font;
 }
-.chinhsachBtn{
-    border: none;
-    margin-top: 20px;
-    background-color: #FFF;
+.chinhsachBtn {
+  border: none;
+  margin-top: 20px;
+  background-color: #fff;
 }
 
 .Btn_holder {
-    display: flex;
-    margin-left: 880px;
-    margin-bottom: 50px;
+  display: flex;
+  margin-left: 880px;
+  margin-bottom: 50px;
 }
 
 .Next_btn {
-    display: flex;
-width: 130px;
-padding: 8px 16px;
-justify-content: center;
-align-items: center;
-gap: 10px;
-border-radius: 50px;
-background: #3A060E;
-color: #B1E321;
-text-align: center;
-font-family: Poppins;
-font-size: 16px;
-font-style: normal;
-font-weight: 600;
-line-height: 28px; /* 175% */
-margin-left: 66px;
+  display: flex;
+  width: 130px;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 50px;
+  background: #3a060e;
+  color: #b1e321;
+  text-align: center;
+  font-family: Poppins;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 28px; /* 175% */
+  margin-left: 66px;
 }
