--- a/src/components/ProductInfor/ProductInfor.css
+++ b/src/components/ProductInfor/ProductInfor.css
@@ -14,12 +14,11 @@
   color: #3a060e;
 
   /* Font_Title */
-  font-family: Poppins;
-  font-size: 20px;
+  font-size: 2rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  width: 300px;
+  width: auto;
   margin-left: 10px;
 }
 
