--- a/src/pages/Admin/CRUDNews/NewsPage/NewsPage.css
+++ b/src/pages/Admin/CRUDNews/NewsPage/NewsPage.css
@@ -19,3 +19,15 @@ line-height: 28px; /* 77.778% */
 .BtnAdd-div{
     margin-left: 30px;
 }
+
+.news-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 3 cột */
+    gap: 20px; /* Khoảng cách giữa các CardNews */
+    margin-top: 50px;
+  }
+  
+  .news-grid-item {
+    width: 100%;
+  }
+  
