--- a/src/pages/User/OrderDetailHistoryPage/OrderDetailHistoryPage.css
+++ b/src/pages/User/OrderDetailHistoryPage/OrderDetailHistoryPage.css
@@ -81,6 +81,7 @@ label {
   justify-content: space-between;
   align-items: center;
   gap: 20px;
+  color: var(--brown100);
 }
 
 .info-customer p,
